--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,15 @@
-*******************************************
+/*******************************************
 3ColorResume
 Author: office@kamsolutions.pl
-
+Modified: Daniel Gunn
 /*******************************************
 FONTS
 *******************************************/
-@import url(http://fonts.useso.com/css?family=Open+Sans:400,600,700,800);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
 /*******************************************
 SETTINGS
 *******************************************/
+
 @charset "utf-8";
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
@@ -19,11 +20,11 @@ SETTINGS
 BODY
 *******************************************/
 body{
-  font-family: 'Open Sans', Arial, Tahoma;
+  font-family: 'Open Sans', Arial, Tahoma, sans-serif;
   font-weight: 400;
   font-size: 1em;
   color: #363636;
-  background: #ededed;
+  background:#0b3c5d;
 }
 /*******************************************
 CONTAINER
@@ -31,7 +32,7 @@ CONTAINER
 .container{
   margin-top: 80px;
   margin-bottom: 15px;
-  background: #fff;
+  background: #eee;
 }
 /*******************************************
 PHOTO (AVATAR)
@@ -45,7 +46,7 @@ PHOTO (AVATAR)
   border-radius: 50%;
   overflow: hidden;
   padding: 5px;
-  background: #ededed;
+  background: #0b3c5d;
   display: inline-block;
 }
 #photo img{
@@ -57,7 +58,7 @@ PHOTO (AVATAR)
   margin: 0;
   padding: 0;
   font-size: 2.4em;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: -1px;
 }
@@ -68,7 +69,7 @@ PHOTO (AVATAR)
   line-height: 1.5em;
 }
 #text-header h1 span{
-  color: #F0563D;
+  color: #328cc1;
 }
 #text-header h1 sup{
   opacity: 0.5;
@@ -88,13 +89,13 @@ DEFAULT BOX
   margin-bottom: 15px;
 }
 .box h2{
-  color: #EC7263;
+  color: #328cc1;
   font-size: 1.8em;
   font-weight: 700;
   text-transform: uppercase;
 }
 .box h2:before{
-  content: '//';
+  content: '★';
   margin-right: 5px;
 }
 .box p{
@@ -105,6 +106,7 @@ DEFAULT BOX
 EDUCATION
 *******************************************/
 #education{
+  color: #fff;
   margin-top: 20px;
   position: relative;
   padding: 1em 0;
@@ -118,24 +120,26 @@ EDUCATION
   top: 0;
   content: ' ';
   display: block;
-  background: #ec7263;
-  background: -moz-linear-gradient(top,  #ffffff 0%, #ec7263 7%, #ec7263 89%, #ffffff 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(7%,#ec7263), color-stop(89%,#ec7263), color-stop(100%,#ffffff));
-  background: -webkit-linear-gradient(top,  #ffffff 0%,#ec7263 7%,#ec7263 89%,#ffffff 100%);
-  background: -o-linear-gradient(top,  #ffffff 0%,#ec7263 7%,#ec7263 89%,#ffffff 100%);
-  background: -ms-linear-gradient(top,  #ffffff 0%,#ec7263 7%,#ec7263 89%,#ffffff 100%);
-  background: linear-gradient(to bottom,  #ffffff 0%,#ec7263 7%,#ec7263 89%,#ffffff 100%);
+  background: #328cc1;
+  background: -moz-linear-gradient(top,  #ffffff 0%, #328cc1 7%, #328cc1 89%, #ffffff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(7%,#328cc1), color-stop(89%,#328cc1), color-stop(100%,#ffffff));
+  background: -webkit-linear-gradient(top,  #ffffff 0%,#328cc1 7%,#328cc1 89%,#ffffff 100%);
+  background: -o-linear-gradient(top,  #ffffff 0%,#328cc1 7%,#328cc1 89%,#ffffff 100%);
+  background: -ms-linear-gradient(top,  #ffffff 0%,#328cc1 7%,#328cc1 89%,#ffffff 100%);
+  background: linear-gradient(to bottom,  #ffffff 0%,#328cc1 7%,#328cc1 89%,#ffffff 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 #education li{
   width: 100%;
   z-index: 2;
+  color: #000;
   position: relative;
   float: left;
 }
 #education .year{
   width: 10%;
-  background: #fff;
+  background: #eee;
+  color: #000;
   padding: 10px;
   font-size: 1.5em;
   font-weight: 700;
@@ -144,11 +148,11 @@ EDUCATION
 #education .description{
   width: 80%;
   display: inline-block;
-  background: #eee;
+  background: #d9b310;
   margin-bottom: 10px;
   position: relative;
   padding: 10px 10px 0 10px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #eee;
 }
 #education .description:after {
   content: '';
@@ -236,7 +240,7 @@ SKILLS
 *******************************************/
 .item-skills{
   height: 30px;
-  background: #F0563D;
+  background: #328cc1;
   color: #fff;
   padding: 5px 10px;
   margin-bottom: 5px;
